[project]
name = "cyberagent-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ptpython>=3.0.32",
]
